fixed focus jump issue.

--- a/src/assets/sass/md/_cards.scss
+++ b/src/assets/sass/md/_cards.scss
@@ -282,10 +282,10 @@
   }
   .card-content {
     text-align: right;
-    padding-top: 10px;
+    padding-top: 4px;
   }
 
-  border-color: #d84315;
+  border-color: #ff1744;
   border-style: dotted;
 
 }
